--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
   intro_slider: ^2.3.3
+  adobe_xd: ^1.0.0+1
+  flutter_login: ^1.0.14
+  google_fonts: ^1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
