--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,13 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  image_picker:
   flutter:
     sdk: flutter
   intro_slider: ^2.3.3
+  camera: ^0.4.2
+  easy_permission_validator: ^1.0.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
